--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:4d9sv3pXqe/xTJdEjXcnDntJvnXbxoX1EGEGF55SVQ4=
 APP_DEBUG=true
 APP_URL=http://example-app.test
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=example_app
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
+MAIL_HOST=localhost
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="coryitpro@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -58,6 +58,6 @@ REGON_API_BASE_URL='https://wyszukiwarkaregontest.stat.gov.pl/wsBIR/UslugaBIRzew
 REGON_API_BASE_URI='http://CIS/BIR/PUBL/2014/07'
 REGON_API_USER_KEY='abcde12345abcde12345'
 
-PAYNOW_API_API_KEY='0a291ecf-fe00-4c67-8e14-8ec7095e9db6'
-PAYNOW_API_SIGNATURE_KEY='4e1f9178-b3b5-4eed-b040-ba30b5875d47'
+PAYNOW_API_API_KEY='8813903e-f918-4bd2-840a-6a8bfde78be0'
+PAYNOW_API_SIGNATURE_KEY='1194629b-1efc-4e98-9d81-ce0cd90e2d9e'
 PAYNOW_API_ENVIRONMENT=sandbox
