--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Regon Test"
 APP_ENV=local
 APP_KEY=base64:4d9sv3pXqe/xTJdEjXcnDntJvnXbxoX1EGEGF55SVQ4=
 APP_DEBUG=true
@@ -34,7 +34,7 @@ MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="coryitpro@gmail.com"
+MAIL_FROM_ADDRESS="noreply@test.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -58,9 +58,12 @@ REGON_API_BASE_URL='https://wyszukiwarkaregontest.stat.gov.pl/wsBIR/UslugaBIRzew
 REGON_API_BASE_URI='http://CIS/BIR/PUBL/2014/07'
 REGON_API_USER_KEY='abcde12345abcde12345'
 
+
 PAYNOW_API_API_KEY='8813903e-f918-4bd2-840a-6a8bfde78be0'
 PAYNOW_API_SIGNATURE_KEY='1194629b-1efc-4e98-9d81-ce0cd90e2d9e'
 PAYNOW_API_ENVIRONMENT=sandbox
 
 INVOICEOCEAN_API_USERNAME='coryitpro'
 INVOICEOCEAN_API_TOKEN='UBo4qgJyJTE944gbmcNf'
+SUPPORT_NAME='coryIT'
+SUPPORT_EMAIL='noreply@regon.com'
